[tool.poetry]
name = "repl_python3_Day-7-Hangman-ended-finished-game"
version = "0.1.0"
description = ""
authors = ["ameeno <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
